test/example/controller/error/handler/throw_from_query.js
module.exports = {
  get: async (controller) => {
    const res = await controller.model.test.error.throwFromQuery()
    return res
  }
}
